--- a/CalcService/CalcService/Web.config
+++ b/CalcService/CalcService/Web.config
@@ -9,18 +9,8 @@
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpsBinding_ICalcService">
-          <security mode="Transport" />
-        </binding>
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="https://calcservice123.azurewebsites.net/CalcService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_ICalcService"
-        contract="MyCalcService.ICalcService" name="BasicHttpsBinding_ICalcService" />
-    </client>
+    <bindings />
+    <client />
     <behaviors>
       <serviceBehaviors>
         <behavior>
