Updated Ping message

--- a/CalcService/CalcService/CalcService.csproj
+++ b/CalcService/CalcService/CalcService.csproj
@@ -73,9 +73,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\app-calcservice-sg1 - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
