fixed incorrect rg reference

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -68,7 +68,7 @@ stages:
               workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app'
               backendType: 'azurerm'
               backendServiceArm: 'RgSegTrainingConnection'
-              backendAzureRmResourceGroupName: 'rg-segtraining2'
+              backendAzureRmResourceGroupName: 'rg-segtraining'
               backendAzureRmStorageAccountName: 'stgsegtrainingimages'
               backendAzureRmContainerName: 'tfstate'
               backendAzureRmKey: 'peopleapi-state'
@@ -124,7 +124,7 @@ stages:
               workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/apim'
               backendType: 'azurerm'
               backendServiceArm: 'RgSegTrainingConnection'
-              backendAzureRmResourceGroupName: 'rg-segtraining2'
+              backendAzureRmResourceGroupName: 'rg-segtraining'
               backendAzureRmStorageAccountName: 'stgsegtrainingimages'
               backendAzureRmContainerName: 'tfstate'
               backendAzureRmKey: 'peopleapi-apim-state'
